Remove tons of unnecessary CSS, fix alignment

--- a/share/main.css
+++ b/share/main.css
@@ -11,6 +11,37 @@ body {
   top: 0;
 }
 
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  overflow: scroll;
+  border-right: 1px solid #999;
+  width: 18%;
+  color: #222;
+  background-color: #eee;
+}
+
+.search, .model {
+  padding: 7px 15px;
+}
+
+.searchbox {
+  width: 100%;
+  font-size: 16px;
+}
+
+.model {
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.model:hover {
+  background-color: #6495ed;
+  color: #eee;
+}
+
 .container {
   position: fixed;
   top: 0;
@@ -41,92 +72,12 @@ body {
   fill: #6495ed;
 }
 
-path.link {
-  fill: none;
-  stroke: #666;
-  stroke-width: 1.5px;
-  stroke-opacity: .6;
-}
-
-circle {
-  fill: #6495ed;
-  stroke: #333;
-  stroke-width: 1.0px;
-}
-
-text {
-  font: 11px sans-serif;
+.node-label {
   pointer-events: none;
-}
-
-.legend {
-  font-size: 12px;
-}
-
-rect {
-  stroke-width: 2;
-}
-
-.sidebar {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  overflow: scroll;
-  border-right: 1px solid #999;
-  width: 18%;
-  color: #222;
-  background-color: #eee;
-}
-.sidebar > div {
-    padding: 7px 15px;
-}
-.sidebar input {
-    width: 100%;
-    font-size: 16px;
-}
-.sidebar > .model {
-    font-size: 20px;
-    cursor: pointer;
-}
-.sidebar > .model:hover {
-    background-color: #2980b9;
-    color: #eee;
 }
 
 .link {
   fill: none;
-  stroke: #999;
-}
-
-.link.belongs_to {
-  stroke: #000;
-}
-
-#belongs_to {
-  fill: #000;
-}
-
-.link.has_and_belongs_to_many {
-  stroke: #f00;
-}
-
-#has_and_belongs_to_many {
-  fill: #f00;
-}
-
-.link.has_many {
-  stroke: #0f0;
-}
-
-#has_many {
-  fill: #0f0;
-}
-
-.link.has_one {
-  stroke: #00f;
-}
-
-#has_one {
-  fill: #00f;
+  stroke-width: 1.5px;
+  stroke-opacity: 0.8;
 }
